syntax = "proto3";

package getBlocks;

message GetBlocksRequest {
    uint32 fromHeight = 1;
    uint32 limit = 2;
    shared.Headers headers = 3;
}

message GetBlocksResponse {
    repeated bytes blocks = 1;
}
