syntax = "proto3";

package postBlock;

message PostBlockRequest {
    bytes block = 1;
    shared.Headers headers = 2;
}

message PostBlockResponse {
    bool status = 1;
    uint32 height = 2;
}
